<resources>
    <string name="app_name">iHealth</string>
    <string name="action_bluetooth_connect">连接手环</string>
    <string name="title_activity_login">登录</string>

    <string name="register_success_hint">恭喜您，注册成功！</string>
    <string name="register_fail_hint">注册失败！请检查网络是否畅通</string>
    <string name="prompt_username">用户名</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="error_invalid_email">邮箱格式不正确</string>
    <string name="error_invalid_password">密码至少6位以上</string>
    <string name="error_incorrect_password">密码不正确，请重新输入</string>
    <string name="error_field_required">此处还未填写</string>

    <string name="main_activity_exit_hint">再按一次退出程序</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="slogan_activity_splash">健康伴侣</string>
    <string name="hint_activity_splash">健康伴侣，您的健康守护专家</string>
    <string name="title_activity_main">首页</string>
    <string name="title_activity_remind">提醒列表</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_settings">设置</string>

    <!-- Strings related to Settings -->
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_contact">联系人</string>
    <string name="pref_title_auto_call">自动拨打电话</string>
    <string name="pref_description_auto_call">自动拨打电话需要权限，如遇到安全软件拦截，请允许</string>
    <string name="pref_title_display_phone">紧急联系人电话</string>
    <string name="pref_default_display_phone">18612345678</string>
    <string name="pref_about">关于</string>

    <string name="pref_title_network">网络</string>
    <string name="pref_title_other">其他</string>
    <string name="pref_title_upload_interval">数据同步</string>
    <string-array name="pref_upload_interval_list_titles">
        <item>5分钟一次</item>
        <item>3分钟一次</item>
        <item>2分钟一次</item>
        <item>从不同步</item>
    </string-array>
    <string-array name="pref_upload_interval_list_values">
        <item>5</item>
        <item>3</item>
        <item>2</item>
        <item>0</item>
    </string-array>

    <string name="title_activity_add_remind_event">添加提醒</string>
    <string name="heart_record_item_heart">心率为：%d 次/分</string>
    <string name="title_activity_supervisor_info_edit">监护人信息</string>
    <string name="title_activity_user_info_edit">用户信息</string>
    <string name="title_activity_monitor">监护</string>
    <string name="title_activity_analyze">心率曲线图</string>


</resources>
